--- a/week3/index.html
+++ b/week3/index.html
@@ -236,8 +236,11 @@
                         <i>Ghi chú:</i>
                     </span>
                     <span> <b> Lương Hữu Quang Minh_MSSV:20200400. Button bên cạnh button delete của mỗi item là button để chỉnh sửa kiểu của input (kiểu mặc
-                        định của input là text), sau khi chỉnh sửa kiểu, nếu kiểu không phải text thì sẽ có button hình dấu cộng để thêm các value vào input </b>
+                        định của input là text), sau khi chỉnh sửa kiểu, nếu kiểu không phải text thì sẽ có button hình dấu cộng để thêm các value vào input.
+                        <br>
+                        !!!!!!!!!!!!!Các thao tác đều bấm enter để xác nhận.</b>
                     </span>
+
             </div>
         </td>
 
